<resources>
    <string name="app_name">AddressBook</string>
    <string name="text">Address Book</string>
    <string name="addBtn">추가</string>
    <string name="delBtn">삭제</string>
    <string name="viewBtn">보기</string>
    <string name="name">이름</string>
    <string name="phone">전화번호</string>
    <string name="email">이메일</string>
    <string name="nothing">Nothing</string>
    <string name="add_msg">You must enter three items.</string>
    <string name="title">SETTING</string>
    <string name="user">USER</string>
    <string name="id">ID</string>
    <string name="thema">THEMA</string>
    <string name="modBTN">수정</string>
    <string name="radioBTN1">White</string>
    <string name="radioBTN2">Dark</string>
    <string name="radioBTN3">Blue</string>
    <string name="select">SELECT</string>
    <string name="checkBox1">Auto save</string>
    <string name="checkBox2">Auto connect WiFi</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="nameid">CHO</string>
    <string name="settingBTN">setting</string>
    <string name="finishBTN">뒤로가기</string>
    <string name="todo">TODO</string>
</resources>